--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -704,4 +704,192 @@
 	<item>Запекать около 20 мин. в хорошо разогретой духовке. Подать на стол с растопленным маслом, добавить зелень по желанию.</item>
 </string-array>
 
+<string-array name="suhariki_iz_batona">
+	<item>Выдавить чеснок на хлеб, полить немного маслом, обсыпать порошковым супом или бульонными кубиками.</item>
+	<item> Перемешать, поставить в духовку на 15 минут на 180 градусов. </item>
+</string-array>
+
+
+<string-array name="suhariki_iz_hleba">
+	<item>Нарезать хлеб кубиками, выложить в противень на бумагу для выпечки.</item>
+	<item>Выдавить чеснок на хлеб, полить немного маслом, обсыпать порошковым супом или бульонными кубиками. </item>
+	<item>Перемешать, поставить в духовку на 15 минут на 180 градусов.</item>
+</string-array>
+
+<string-array name="kuritsa_s_yablokami">
+	<item>Курицу промываем под теплой водой.  Посыпаем приправой по вкусу. Отлично подойдет готовая смесь приправ для курицы, однако обратите внимание, что многие из них соль уже содержат, а значит не требуют ее дополнительного добавления в блюдо.                    </item>
+	<item>Яблоки моем и чистим, нарезаем тонкими пластинами. К нарезанным яблокам добавляем сахар.</item>
+	<item>В пакет для запекания укладываем подушку из яблок, а поверх них – аккуратно кладем курицу. Пакет завязываем, делаем небольшие проколы для воздуха.</item>
+	<item>Блюдо выпекаем в духовке 45 – 50 минут при температуре 180 градусов.</item>
+</string-array>
+
+<string-array name="salat_iz_kuritsi_s_chesnokon">
+	<item>Для салата можно использовать любую часть курицы (филе, бедра). Мясо необходимо мелко нарезать. Обжарить его до готовности в раскаленном растительном масле. Немного посолить и поперчить. Курицу можно отварить (вместо обжаривания), если вы хотите сделать блюдо более легким и полезным. </item>
+	<item>Выложить мясные ломтики на бумажные полотенца, чтобы они впитали лишний жир. Нарезать томаты кусочками среднего размера. Посолить измельченные помидоры. Зубчики чеснока раздавить прессом или натереть на мелкой терке. В миску выложить курицу. Добавить чеснок и томаты.</item>
+	<item>Натереть твердый сыр на крупной терке. Выложить его в миску с остальными ингредиентами.</item>
+	<item>Добавить майонез. Его количество регулируйте по собственному вкусу.</item>
+	<item>Все ингредиенты перемешать лопаткой, чтобы соус равномерно распределился. Блюдо можно подавать порционно или в общем салатнике. Приятного аппетита!</item>
+</string-array>
+
+<string-array name="krimskie_chebureki_s_myaom_i_lukom">
+	<item>Перемешать фарш с предварительно нашинкованными луком и зеленью. В большую миску насыпать горкой муку, влить по центру конуса подсоленную горячую воду и перемешать до образования однородного заварного теста.</item>
+	<item>В другой емкости перемешать масло, яйца и муку с добавлением водки, сахара и соли в однородную смесь. Объединить ее с заварным тестом, хорошо вымесить. Полученный колобок обернуть пленкой и дать постоять полчаса.</item>
+	<item>Раскатать сочни для чебуреков, положить по центру фарш и тщательно залепить края, можно использовать для этого вилку. Разогреть в сковороде масло и обжарить крымские чебуреки с мясом и луком до золотистой корочки, с обеих сторон.</item>
+</string-array>
+
+<string-array name="burger_s_kuritsoy">
+	<item>Окорочок без кости положить между двумя пакетами, отбить кухонным молотком, натереть перцем, солью и другими приправами, выложить на сковороду с небольшим количеством масла и по 5мин с каждой стороны обжарить.</item>
+	<item>Нарезать тонкой соломкой морковь и капусту, поперчить и посолить, добавить пропущенный через пресс зубчик чеснока, сбрызнуть овощи уксусом и растительным маслом, слегка посыпать кориандром и сахаром, перемешать и оставить мариноваться.</item>
+	<item>Перемешать майонез с аджикой, смазать половинки булочек в месте среза.</item>
+	<item>Из одного яйца пожарить глазунью.</item>
+	<item>Выложить на нижнюю половинку бургера листья салата и овощи, а также лук, сыр, куриное мясо, затем яйцо, накрыть второй половинкой булочки и подать бургер с курицей и яйцом к столу.</item>
+</string-array>
+
+<string-array name="kartofelynie_palochki_s_sirom">
+	<item>Картофель отварить в мундире, очистить, натереть на тёрке или пропустить через мясорубку.</item>
+	<item>Добавить яйца, специи, соль, тщательно перемешать.                                                             Добавить к полученной массе просеянную муку, перемешать. Основа для картофельных палочек готова!</item>
+	<item>Сыр нарезать "брусочками".  Влажными руками сформировать картофельные палочки, в середину положить сыр, обвалять в панировочных сухарях и обжарить с 4-х сторон на растительном масле до образования золотистой корочки.</item>
+	<item> Подавать картофельные палочки можно горячими или тёплыми с вашим любимым соусом.</item>
+</string-array>
+
+<string-array name="blini_iz_butilki">
+	<item> В бутылку вставляем воронку и засыпаем муку, сахар, соль, заливаем яйца, раст.масло и молоко и закручиваем крышкой.</item>
+	<item>А сейчас танцы в припрыжу и потрясыванием бутылки. В бутылке очень удобно размешивать тесто!</item>
+	<item> Капаем масло на сковороду. Льем тесто из бутылки. Разливаем тесто по сковороде и печем блины.</item>
+	<item>Готово! И не обязательно жарить всё тесто сразу, поставьте бутылку с тестом в холодильник и утром на завтрак приготовьте аппетитные горячие блинчики!</item>
+</string-array>
+
+<string-array name="hvorost">
+	<item>Замесим тесто. Для этого соединим в миске одно яйцо, соль, сметану и водку. Тщательно перемешаем все ингредиенты.</item>
+	<item> Затем постепенно добавим необходимое количество муки, чтобы тесто получилось эластичным и плотным. Накроем тесто полотенцем и оставим ненадолго «отдохнуть».</item>
+	<item>Дальше посыплем рабочую поверхность мукой и, вооружившись скалкой, тонко-тонко раскатаем тесто. Помним, что если раскатать тесто недостаточно тонко, то печение не пропечется и в итоге будет твердым и невкусным. Раскатанное тесто нарежем на удлиненные ромбики размером сантиметров 10.</item>
+	<item> В середине каждого ромбика сделаем надрез сантиметров 5 и оба кончика теста проденем в этот разрез. </item>
+	<item> В глубокую сковородку (если у вас есть чудо-техника в виде фритюрницы, то вам сказочно повезло) нальем 100-150 г растительного масла, поставим на огонь, чтобы оно начало кипеть.</item>
+	<item> В кипящее масло опустим несколько заготовок печенья, чтобы оно не соприкасалось друг с другом. Имейте в виду, что хворост увеличится в размере, поэтому не кладите слишком много печенюшек.</item>
+	<item>Зарумянивается печенье очень быстро, поэтому следим, чтоб оно не подгорело и, ловко орудуя шумовкой, переворачиваем его с одной стороны на другую, выкладывая готовое печенье на салфетку, чтобы удалить лишнее масло.</item>
+	<item> Сверху хворост посыплем сахарной пудрой, смешанной с ванилином.</item>
+</string-array>
+
+<string-array name="blinchiki_zavarnie">
+	<item>Кефир, яйца, муку, соль, сахар перемешать, слегка взбить венчиком.</item>
+	<item>В стакан крутого кипятка бросить 1/2 ч. л. соды, быстро размешать и вылить в тесто, перемешать, дать постоять 5 мин.</item>
+	<item> Добавить 2-3 ст. л. масла растительного, перемешать и жарить блины.</item>
+	<item>Если печь на раскаленной сковороде, в блинах получается болше дырок.</item>
+</string-array>
+
+<string-array name="kartoshka_s_sirom">
+	<item>С батона срезать корку и измельчить мякоть.</item>
+	<item>Картошку отварить в мундире (очень важно ее не переварить, чтобы не рассыпалась!), почистить и нарезать кружками примерно 1 см толщиной.</item>
+	<item> Яйцо слегка взбить вилкой.  Сыр нарезать плоскими кусочками.</item>
+	<item> На каждый кружок картошки положить кусочек сыра, сверху накрыть вторым кружком картошки.</item>
+	<item> Разогреть в сковороде оливковое масло. Обмакнуть картофельный сэндвич в яйцо. Обвалять в хлебной крошке и обжарить с обеих сторон в разогретом масле.</item>
+</string-array>
+
+<string-array name="biskvit_klassicheskiy">
+	<item>Отделяем белки от желтков. Начинаем взбивать белки на самой маленькой скорости миксера. Медленно, по одной ложке добавляем сахар и всыпаем ваниль.</item>
+	<item>Когда белковая масса станет белой и довольно плотной, так же по ложке добавляем желтки, продолжая при этом взбивать.</item>
+	<item>Убираем миксер и начинаем просевать в миску с белками муку, аккуратно вымешивая ложкой по направлению снизу вверх.</item>
+	<item>Готовое тесто выливаем в смазанную маслом форму и отправляем в разогретую до 190-200 градусов духовку на 20-25 минут.           Главное правило при выпечке бисквита - не открывать дверцу духовки - иначе опадет. Когда подойдет время, вынимаем форму и переворачиваем бисквит на тарелку (решетку, полотенце) и даем остыть.</item>
+	<item>При соблюдении всех правил бисквит получается высоким и очень воздушным.</item>
+</string-array>
+
+<string-array name="medovi_biskvit">
+	<item>Взбиваем яйца, сахар и мед до плотной белой массы. Не меньше 10 минут. В объеме увеличиться должно раза в 4 примерно! Потом аккуратно всыпаем муку и перемешать снизу вверх.</item>
+	<item>Тесто вылить в форму, застеленную бумагой для выпечки. Не забудьте прямо перед выпечкой крутануть в какую-нибудь сторону пару раз (чтобы поверхность была ровной).</item>
+	<item>Выпекать в разогретой до 170-180С духовке. Готовность определяем шпажкой. Остужаем в форме.</item>
+</string-array>
+
+<string-array name="kurinaya_grudka_pod_smetanno_chesnochnim_sousom">
+	<item>Сметану посолить, поперчить, добавить выдавленный через чеснокодавку чеснок, перемешать.</item>
+	<item>Куриные грудки выложить в форму для запекания, смазать сметаной с чесноком.</item>
+	<item>Сыр натереть на мелкой терке.</item>
+	<item>Грудки посыпать сыром, поставить в духовку. Запекать при температуре 180 градусов в течение 45-50 минут.</item>
+</string-array>
+
+<string-array name="yaytsa_po_shatlandski">
+	<item>Сварите яйца. Варите не более 4-5 минут.</item>
+	<item>Соедините говядину и свинину вместе и сделайте однородный мелко рубленый фарш. Добавьте в фарш сырое яйцо и вымесите. Посолите и добавьте специи. Хорошо перемешайте.</item>
+	<item>Разделите получившийся фарш на равные части (6 частей). Из каждой части сделайте овальную лепешку, размером с ладошку и толщиной не больше сантиметра и плотно заверните в них яйца. Образовавшиеся швы лучше делать с напуском и хорошо выравнять.</item>
+	<item>Возьмите сковороду или небольшую кастрюлю. Налейте масло и разогрейте на огне. Огонь должен быть средне-сильный. Опустите в кипящее масло котлетки и жарьте до коричневого цвета, часто переворачивая.</item>
+	<item>Когда котлетки готовы, выложите их на чистое полотенце (чтобы удалить лишний жир). Подавать котлетки лучше всего с овощами, можно в любом виде: и в холодном и в горячем.</item>
+</string-array>
+
+<string-array name="yaytso_v_korzinke_iz_bekona">
+	<item>На дно формочки выложите 2 куска салями.</item>
+	<item>Духовку нагрейте до 180 градусов. В сковороде на сливочном масле обжарьте грибы около 2 минут, посолите и поперчите. Выложите немного грибов.</item>
+	<item>Заверните бекон (2 куска) по формочке. Положите немного сыра.</item>
+	<item>Разбейте яйцо. Посолите и поперчите.</item>
+	<item>Выпекайте 25-30 минут до готовности яиц (на Ваше усмотрение).</item>
+</string-array>
+
+<string-array name="omlet_s_gribami_i_zeleny">
+	<item>Взбить яйца и белки в миске среднего размера.</item>
+	<item>Разогреть сковороду диаметром 20 см с антипригарным покрытием и поджаривать на ней порезанные тонкими ломтиками шампиньоны до тех пор, пока они не станут мяг-кими. Переложить шампиньоны в небольшую миску, добавить мелко нарезанную петрушку и перемешать.</item>
+	<item>Поставить на огонь большую сковороду, влить в нее 1/4 взбитых яиц, чтобы получился тонкий омлетный блинчик, и жарить на среднем огне до золотистого цвета. Так же при-готовить остальные 3 омлетика.</item>
+	<item>Омлетики сложить пополам, вложив внутрь начинку из шампиньонов с петрушкой.</item>
+</string-array>
+
+<string-array name="kartofel_zapechenniy">
+	<item>Картофель, нарезанный соломкой, обдайте кипятком, затем воду слейте.</item>
+	<item>Выложите в форму для запекания.</item>
+	<item>Соедините яйца, сливки и молоко и залейте полученной смесью картофель.</item>
+	<item>Сверху обильно посыпьте натертым сыром и поставьте в разогретую духовку на 30 мин.</item>
+</string-array>
+
+<string-array name="kartofel_s_vetchinoy">
+	<item>Картофель в кожуре отварите в подсоленной воде, очистим и нарежем кружками; ветчину мелко порубим.</item>
+	<item>Выложим в приготовленную форму слой картофеля и ветчины.</item>
+	<item>Сметану перемешаем с яйцами, мукой, тертым сыром (оставьте немного на посыпку), солью и выльем на картофель.</item>
+	<item>Сверху уложим слой картофеля, положим кусочек масла и посыплем оставшимся тертым сыром. Запекаем в духовке в течение 40–45 минут.</item>
+	<item>Подаем, нарезав на порции. Приятного аппетита :)</item>
+</string-array>
+
+<string-array name="hachapuri">
+	<item>Сыр илинатереть на крупной терке и смешать вилкой с яйцами. Муку просеять и смешать с разрыхлителем.</item>
+	<item>В миску насыпать просеянную муку, сделать в середине углубление и влить в него кефир , яйцо, соль, сахар и растительное масло.</item>
+	<item>Замесить некрутое эластичное тесто и поставить его на час в холодильник. Тесто разделить на небольшие кусочки (у меня 9 шт) и каждый кусочек раскатать в тонкий круглый пласт.</item>
+	<item>На середину лепешки положить натертый сыр (начинки должно быть много ), собрать края лепешки к центру и тщательно защипать (начинка должна оказаться в середине лепешки).</item>
+	<item>Перевернуть лепешку защипанным швом вниз и достаточно тонко раскатать скалкой. Сковороду разогреть, смазать растительным маслом и жарить хачапури на среднем огне с двух сторон до готовности, сковороду смазываем только перед первым хачапури,остальные жарим на сухой чковороде.</item>
+	<item>Готовые хачапури смазывать сливочным маслом</item>
+</string-array>
+
+<string-array name="tartaletki_iz_kartofelya_s_kur_file_pod_chesnochno_sirnim_sousom">
+	<item>Куриное филе нарезать средними кубиками.</item>
+	<item>В сковороду налить водички (около стакана), добавить майонез и выложить кусочки куриного филе. Посолить. Тушить под крышкой 30 мин.</item>
+	<item>Добавить нарезанный чеснок. Всё! Начинка для тарталеток готова!</item>
+	<item>Теперь будем чистить картошку. Почистили, помыли. Трём картошечку на тёрке-строгалке. Не забудем посолить!</item>
+	<item>Дальше берём формочки для кексов. У меня они с антипригарным покрытием. Хорошо смазываем их подсолнечным маслом. Я взяла рафинированное. Выкладываем в формочки тёртую сырую картошку, так, чтобы это было в форме корзиночек. В середину выкладываем курицу с чесноком. Ставим в разогретую духовку (у меня температура была 240 градусов) на 20-25 минут.</item>
+	<item>Пока тарталетки сидят в духовку, трём сыр на тёрке-строгалке и режем зелёный лук. Сыр и лук перемешиваем.</item>
+	<item>По истечении 20-25 минут достаём тарталетки из духовки и посыпаем их сверху сыром с луком. Ещё раз отправляем их в духовку, минут на 5-10. Приятного аппетита!:)</item>
+</string-array>
+
+<string-array name="kartofelnie_shariki">
+	<item>Картофель вымойте, очистите, отварите до полуготовности и слейте воду. Не давая остыть, горячим быстро и тщательно разотрите деревянным пестиком. Добавьте предварительно растопленное горячее сливочное масло, сырое яйцо, посолите и поперчите по вкусу, еще раз хорошенько разотрите и перемешайте.</item>
+	<item>Сформируйте из теплого картофельного пюре небольшие шарики. Обваляйте их в муке, затем в разболтанном яйце и запанируйте в пшеничной муке высшего сорта или в мелких пшеничных панировочных сухарях. </item>
+	<item>Шарики можно просто обвалять в муке или в сухарях без смачивания в яйце - это по вкусу.</item>
+	<item>Растительное масло разогрейте до кипения на большой сковороде с высокими бортами или в кастрюле и обжарьте в нем картофельные шарики до золотистого цвета.</item>
+	<item>Подавайте на стол горячими, украсив свежей зеленью.</item>
+</string-array>
+
+<string-array name="tort_v_krujke">
+	<item>В большую кружку положить муку, сахар, добавить яйцо и все хорошо перемешать.</item>
+	<item>Добавить молоко, растопленное сливочное масло и растительное масло.</item>
+	<item>Все хорошо взбить до однородной массы. Выпекать в микроволновой печи в течении 2-3 минут на максимальной мощности.</item>
+	<item>Быстрый и сладкий десерт готов! Приятного аппетита!</item>
+</string-array>
+
+<string-array name="kurinie_paluchki_s_sirom">
+	<item>Куриное филе вымыть, обсушить, нарезать небольшими тонкими полосочками, посолить поперчить.</item>
+	<item>Приготовить льезон: 2 яйца и мука (консистенция жидкой сметаны).</item>
+	<item>Натереть на тёрке 0,150 кг твёрдого сыра.</item>
+	<item>Куриные полосочки обвалять в натертом сыре, далее обмакнуть в льезон и жарить на раскаленной сковороде с небольшим количеством растительного масла.</item>
+</string-array>
+
+<string-array name="kuriniye_otbivmiye_v_sirnom_klyare">
+	<item>Каждую половинку куриного филе разрезать пополам, слегка отбить, посолить, поперчить и полить лимонным соком.</item>
+	<item>Яйца взбить, сыр натереть на мелкой терке, добавить к яйцам.</item>
+	<item>Каждый кусочек мяса обвалять в муке, затем в яично-сырной смеси и обжарить на растительном масле с двух сторон до готовности.</item>
+	<item>Выложить на бумажное полотенце, чтобы убрать излишки жира.</item>
+</string-array>
+
 </resources>
