--- a/app/src/main/res/layout/activity_add_ingredients.xml
+++ b/app/src/main/res/layout/activity_add_ingredients.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,7 +9,6 @@
 
 
     <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -18,9 +16,7 @@
             android:id="@+id/bigImageOfCategory"
             android:layout_width="match_parent"
             android:layout_height="@dimen/flexible_space_image_height"
-            android:scaleType="centerCrop"
-            android:src="@drawable/meat_photo" />
-
+            android:scaleType="centerCrop" />
         <View
             android:id="@+id/overlay"
             android:layout_width="match_parent"
