--- a/app/src/main/res/values/steps.xml
+++ b/app/src/main/res/values/steps.xml
@@ -704,12 +704,6 @@
 	<item>Запекать около 20 мин. в хорошо разогретой духовке. Подать на стол с растопленным маслом, добавить зелень по желанию.</item>
 </string-array>
 
-<string-array name="suhariki_iz_batona">
-	<item>Выдавить чеснок на хлеб, полить немного маслом, обсыпать порошковым супом или бульонными кубиками.</item>
-	<item> Перемешать, поставить в духовку на 15 минут на 180 градусов. </item>
-</string-array>
-
-
 <string-array name="suhariki_iz_hleba">
 	<item>Нарезать хлеб кубиками, выложить в противень на бумагу для выпечки.</item>
 	<item>Выдавить чеснок на хлеб, полить немного маслом, обсыпать порошковым супом или бульонными кубиками. </item>
@@ -798,6 +792,7 @@
 	<item>Тесто вылить в форму, застеленную бумагой для выпечки. Не забудьте прямо перед выпечкой крутануть в какую-нибудь сторону пару раз (чтобы поверхность была ровной).</item>
 	<item>Выпекать в разогретой до 170-180С духовке. Готовность определяем шпажкой. Остужаем в форме.</item>
 </string-array>
+
 
 <string-array name="kurinaya_grudka_pod_smetanno_chesnochnim_sousom">
 	<item>Сметану посолить, поперчить, добавить выдавленный через чеснокодавку чеснок, перемешать.</item>
@@ -890,6 +885,68 @@
 	<item>Яйца взбить, сыр натереть на мелкой терке, добавить к яйцам.</item>
 	<item>Каждый кусочек мяса обвалять в муке, затем в яично-сырной смеси и обжарить на растительном масле с двух сторон до готовности.</item>
 	<item>Выложить на бумажное полотенце, чтобы убрать излишки жира.</item>
+</string-array>
+
+<string-array name="kolbasa_jarenaya_s_kapustoy">
+	<item>Вареную колбасу (любительскую, отдельную, докторскую и др.) очистить от оболочки, нарезать ломтиками толщиною 5–6 мм и перед подачей обжарить. </item>
+	<item>Одновременно приготовить тушеную капусту, но более острого вкуса, чем обычно, положить ее на блюдо, сверху капусты поместить ломтики колбасы и посыпать нарезанной зеленью петрушки или укропом. </item>
+	<item>Можно взять тонкие батоны колбасы, обмыть, вытереть насухо и обжарить в жире так, чтобы получилась румяная хрустящая корочка.</item>
+	<item>При подаче к столу колбасу нарезать на порции, уложить на подогретое блюдо и загарнировать тушеной капустой.</item>
+</string-array>
+
+<string-array name="soup_bones">
+	<item>Бульон из костей варят в том случае, когда из мякоти хотят приготовить второе блюдо (котлеты, гуляш и пр.). </item>
+	<item>Чтобы кости лучше и быстрее вываривались, их нужно разрубить помельче. Промытые и разрубленные кости положить в кастрюлю, залить холодной водой и поставить варить. </item>
+	<item>Бульон из костей варят так же, как и из мяса, т. е. при слабом кипении и периодически снимая с бульона жир. </item>
+	<item>Время варки бульона из костей от 2 1/2 до 3 часов. Чтобы придать бульону лучший вкус, следует за час до окончания варки положить в бульон очищенные коренья, лук, а также соль. Готовый бульон процедить.</item>
+	<item>Бульон из костей по своим питательным и вкусовым качествам уступает мясному бульону, так как в отличие от мяса, кости не содержат экстрактивных веществ; при варке из костей переходят в бульон главным образом клеевые вещества и жир. Поэтому его рекомендуется использовать главным образом для приготовления картофельных супов.</item>
+</string-array>
+
+<string-array name="soup_mash">
+	<item>Промытые в теплой воде сухие грибы положить в кастрюлю, добавить очищенную и разрезанную пополам луковицу, залить холодной водой и варить при слабом кипении в течение 2–2 1/2 часов. </item>
+	<item>Для ускорения варки грибы можно предварительно замочить на 1–2 часа в холодной воде, в которой их потом и варить.</item>
+	<item>Готовый бульон процедить, грибы промыть холодной водой, мелко нашинковать и положить в суп, приготовляемый из грибного бульона.</item>
+</string-array>
+
+<string-array name="soup_cubbage">
+	<item>Сварить мясной бульон. Цветную капусту разобрать на отдельные кочешки (если кочешки крупные, то разрезать их на 2–4 части), морковь нарезать кружочками и все положить в процеженный бульон;</item>
+	<item> затем добавить сельдерей, соль и варить на слабом огне 20–30 минут. За 2–3 минуты до окончания варки стебли сельдерея вынуть и посыпать суп мелко нарезанной зеленью петрушки. </item>
+	<item>В суп в начале варки можно добавить 1 1/2 — 2 ст. ложки риса.</item>
+	<item>К супу подать пирожки или пирог с начинкой из говядины или ливера.</item>
+</string-array>
+
+<string-array name="bozbash">
+	<item>Промытую баранину нарезать или нарубить на куски весом 30–40 гр., положить в кастрюлю, залить водой так, чтобы она только покрыла баранину, посолить и, накрыв кастрюлю крышкой, варить на слабом огне, снимая пену.</item>
+	<item>В отдельной кастрюле поставить варить перебранный и промытый горох, залив его 2–3 стаканами холодной воды. Варить горох надо на медленном огне. Примерно, через 1–1 1/2 часа в горох переложить сваренные кусочки баранины, отделив все мелкие косточки. </item>
+	<item>После этого добавить процеженный бульон, мелко нарезанный, поджаренный на масле лук, нарезанный картофель и яблоки, томат-пюре, соль, перец и, накрыв крышкой, тушить 20–25 минут.</item>
+	<item>Подают бозбаш посыпанным мелко нарезанной зеленью петрушки.</item>
+</string-array>
+
+<string-array name="Shurpa">
+	<item>Сварить мясной бульон. Лук нарезать в виде соломки и поджарить в разогретом жире.</item>
+	<item>Мясо нарезать кусочками весом 25–30 гр., обжарить, смешать с поджаренным луком, добавить морковь, нарезанную кубиками, томат-пюре и жарение продолжать в течение 5–6 минут. </item>
+	<item>Подготовленное таким образом мясо вместе с овощами переложить в кастрюлю, залить бульоном и довести до кипения. Затем положить картофель, нарезанный дольками, соль, перец и варить 15–20 минут.</item>
+</string-array>
+
+<string-array name="soup_iz_fasoli_s_lapshoi">
+	<item>Перебранную и промытую фасоль на 3–4 часа залить холодной водой. Затем воду слить, фасоль залить 2 1/2 л бульона или холодной воды и сварить до мягкости. </item>
+	<item>Добавить поджаренный с маслом лук, соль, перец (по вкусу), засыпать лапшу и варить еще 20 минут. При подаче к столу суп посыпать зеленью петрушки.</item>
+</string-array>
+
+<string-array name="soup_iz_fasoli_s_krtofilem">
+	<item>Замоченную фасоль варить до мягкости. Затем положить поджаренные морковь и лук, картофель, соль, перец, лавровый лист и продолжать варку супа до готовности.</item>
+</string-array>
+
+<string-array name="soup_s_bruselsoy_kapustoy">
+	<item>Очищенную брюссельскую капусту опустить на 2 минуты в кипящую воду, затем откинуть на дуршлагр., дать стечь воде, переложить капусту в суповую кастрюлю с растопленным маслом и слегка поджарить.</item>
+	<item>Залить капусту 6–7 стаканами грибного бульона (или горячей воды), добавить картофель, нарезанный тонкими ломтиками, посолить и варить на слабом огне 20–30 минут.</item>
+	<item>При подаче на стол в суп положить сметану.</item>
+</string-array>
+
+<string-array name="soup_kartofelni_s_gribami">
+	<item>Свежие грибы, белые или маслята, очистить и промыть. Корешки отрезать, изрубить и поджарить на масле. Отдельно поджарить коренья и лук. Шляпки грибов нарезать ломтиками, ошпарить, откинуть на сито и, когда вода стечет, переложить в кастрюлю, залить водой и варить в течение 40 минут.</item>
+	<item>После этого в кастрюлю положить нарезанный кубиками картофель, поджаренные корешки грибов, коренья, лук, соль, перец, лавровый лист и варить еще 20–25 минут. При подаче на стол добавить сметану, мелко нарезанный зеленый лук и укроп.</item>
+	<item>Суп со свежими грибами можно приготовить и на мясном бульоне. В суп можно добавить манную крупу (по 10 г на тарелку).</item>
 </string-array>
 
 </resources>
