--- a/app/src/main/res/layout/card_available_reciepe.xml
+++ b/app/src/main/res/layout/card_available_reciepe.xml
@@ -63,7 +63,7 @@
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceSmall"
                 android:text="продуктов"
-                android:id="@+id/text_products"
+                android:id="@+id/number_of_products_tv"
                 android:layout_alignTop="@+id/view"
                 android:layout_below="@+id/avlRcpNameTV"
 
@@ -87,8 +87,8 @@
                 android:background="@color/grey"
                 android:id="@+id/viewVerticalLeft"
                 android:layout_alignParentBottom="true"
-                android:layout_toLeftOf="@+id/text_products"
-                android:layout_toStartOf="@+id/text_products"
+                android:layout_toLeftOf="@+id/number_of_products_tv"
+                android:layout_toStartOf="@+id/number_of_products_tv"
                 android:layout_marginRight="20dp"
                 android:layout_marginEnd="20dp"
                 android:layout_alignTop="@+id/view" />
@@ -99,8 +99,8 @@
                 android:background="@color/grey"
                 android:id="@+id/viewVerticalRight"
                 android:layout_alignParentBottom="true"
-                android:layout_toRightOf="@+id/text_products"
-                android:layout_toEndOf="@+id/text_products"
+                android:layout_toRightOf="@+id/number_of_products_tv"
+                android:layout_toEndOf="@+id/number_of_products_tv"
                 android:layout_marginLeft="21dp"
                 android:layout_marginStart="21dp"
                 android:layout_alignTop="@+id/view" />
