--- a/app/src/main/res/layout/card_material_recipe_time.xml
+++ b/app/src/main/res/layout/card_material_recipe_time.xml
@@ -6,7 +6,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="90"
-        android:id="@+id/text_time"
+        android:id="@+id/time_tv"
         android:textSize="50dp"
         android:fontFamily="sans-serif-thin"
         android:textColor="#434343"
@@ -26,5 +26,5 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="55dp"
-        android:id="@+id/measure_for_time_tv" />
+        android:id="@+id/measure_of_time_tv" />
 </RelativeLayout>
